<resources>
    <string name="app_name">Confroid</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="hint_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="register_new_user_text">New User? Register now</string>
    <string name="button_send_file_text">Send File</string>
    <string name="navigation_open_drawer" translatable="false">Open navigation drawer</string>
    <string name="navigation_close_drawer" translatable="false">Close navigation drawer</string>
    <string name="dark_mode_text">Dark Mode</string>
    <string name="light_mode_text">Light Mode</string>
    <string name="moon_and_sun">Moon and sun</string>
    <string name="languages_text">Languages</string>
    <string name="home">Home</string>
    <string name="files_download">Files Download</string>
    <string name="profile">Profile</string>
    <string name="logout_text">Logout</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="license">License</string>
    <string name="search">Search</string>
    <string name="tutorial">Tutorial</string>
    <string name="menu">Menu</string>
    <string name="language_explanation_text">Select which language you want your app in</string>
    <string name="login_fail">We were unable to login. Try again</string>
    <string name="help_explain_login">Enter username and password. Then the login button. If it does not work will display an error message.</string>

    <string-array name="languages_list">
        <item name="0">En</item>
        <item name="1">En</item>
        <item name="2">Fr</item>
        <item name="3">Pt</item>
    </string-array>

    <integer-array name="flags_list">
        <item name="0">@drawable/ic_earth</item>
        <item name="1">@drawable/ic_england</item>
        <item name="2">@drawable/ic_french</item>
        <item name="3">@drawable/ic_portugal</item>
    </integer-array>
    <string name="help_explain_register_button">Clicking the text will bring you to the register</string>
    <string name="help_explain_register_text">Enter username and same password then click on register</string>
    <string name="send_all_text">Send All</string>
    <string name="generate_modified_config_text">generate modified config</string>
    <string name="content_text" translatable="false">"CONTENT: "</string>
    <string name="version_text" translatable="false">"VERSION: "</string>
    <string name="tag_text" translatable="false">"TAG: "</string>
    <string name="new_value_text">New Value:</string>
    <string name="old_value_text">Old Value:</string>
    <string name="field_name_text">Field Name:</string>
    <string name="generate_token_text">generate token</string>
    <string name="send_token_to_app_text">send token to app</string>
    <string name="creation_of_new_version">Creation of new version:</string>
    <string name="number_of_versions_text">Number of versions existing</string>
    <string name="help_app_explain">The name of the app. Click to see all versions</string>
    <string name="all_version_information">A config with it\'s version and tag. Click to see details</string>
    <string name="all_version">All Version</string>
    <string name="all_app">Apps</string>
    <string name="delete_config">Delete config</string>
    <string name="branch_details">To see further details</string>
    <string name="modify_config">To modify config</string>
    <string name="config">Configuration</string>
    <string name="files">Files</string>


</resources>